fix link to CSS file in <head>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link href="css/styles.css" rel="stylesheet" type="css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
   <title>Programming Language Suggestor</title>
@@ -11,7 +11,7 @@
 
   <div class="Container">
     <h1>Languagetron 5000</h1>
-    <p>Greetings, human! I am the Languagetron 5000 Programming Language Suggestor Bot, serial number |01000111|01110010|01100101|01100111|01101111|01110010|01111001|00001101! You can call me Greg for short! </p>
+    <p>Greetings, human! I am the Languagetron 5000 Programming Language Suggestor Bot, serial number: |01000111|01110010|01100101|01100111|01101111|01110010|01111001|00001101! You can call me Greg for short! </p>
 
     <p>So you're interested in learning your first programming language, are you? Wonderful! I am going to ask you a series of questions to help narrow down which language is right for you! Sound good?</p>
 
@@ -20,7 +20,7 @@
 
       <button class="btn btn-deny" id="no">No, not really, Greg.</button>
     </div>
-    
+
     <div class="inputName">
       <p>Well alright then, human! Say, don't you think things would be better if I knew your name? I sure do... Let me know! If not I guess that's fine.</p>
 
