add divs for survey results

--- a/index.html
+++ b/index.html
@@ -82,52 +82,51 @@
         <p>Which of these four characteristics do you feel is most important?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioOne" value="design" style="color: green;">
+            <input type="radio" name="radioOne" value="1">
             Design
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioOne" value="power">
+            <input type="radio" name="radioOne" value="0">
             Power
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioOne" value="easeOfUse">
+            <input type="radio" name="radioOne" value="1">
             Ease of use
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioOne" value="value">
+            <input type="radio" name="radioOne" value="0">
             Value
           </label>
         </div>
 
-
         <p>What is your favorite season?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioTwo" value="winter">
+            <input type="radio" name="radioTwo" value="1">
             Winter
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioTwo" value="spring">
+            <input type="radio" name="radioTwo" value="0">
             Spring
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioTwo" value="summer">
+            <input type="radio" name="radioTwo" value="1">
             Summer
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioTwo" value="fall">
+            <input type="radio" name="radioTwo" value="0">
             Fall
           </label>
         </div>
@@ -135,26 +134,26 @@
         <p>Which of these hobbies do you align with most?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioThree" value="instrument">
+            <input type="radio" name="radioThree" value="1">
             Playing an instrument
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioThree" value="bike">
+            <input type="radio" name="radioThree" value="0">
             Cycling
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioThree" value="drawing">
+            <input type="radio" name="radioThree" value="1">
             Drawing
             </input>
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioThree" value="yarn">
+            <input type="radio" name="radioThree" value="0">
             Knitting
           </label>
         </div>
@@ -162,25 +161,25 @@
         <p>Which of the four Hogwarts Houses do you believe you belong in?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFour" value="gHouse">
+            <input type="radio" name="radioFour" value="1">
             Gryffindor
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFour" value="sHouse">
+            <input type="radio" name="radioFour" value="0">
             Slytherin
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFour" value="rHouse">
+            <input type="radio" name="radioFour" value="1">
             Ravenclaw
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFour" value="hHouse">
+            <input type="radio" name="radioFour" value="0">
             Hufflepuff
           </label>
         </div>
@@ -188,25 +187,25 @@
         <p>Which would you prefer?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFive" value="island">
+            <input type="radio" name="radioFive" value="1">
             A tropical island vacation
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFive" value="camp">
+            <input type="radio" name="radioFive" value="0">
             Camping in a serene forest
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFive" value="cruise">
+            <input type="radio" name="radioFive" value="1">
             A luxury cruise
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFive" value="home">
+            <input type="radio" name="radioFive" value="0">
             A quiet staycation
           </label>
         </div>
@@ -224,6 +223,19 @@
           <input type="submit">
         </div>
       </form>
+
+      <div id="results">
+        <div id="jScript">
+          <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is JavaScript! Woo!</p>
+        </div>
+
+        <div id="python">
+          <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is Python! Woo!</p>
+        </div>
+
+        <div id="swift">
+          <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is Swift! Woo!</p>
+        </div>
     </div>
       
   </div>
