--- a/index.html
+++ b/index.html
@@ -82,25 +82,25 @@
         <p>Which of these four characteristics do you feel is most important?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioOne" value="1">
+            <input type="radio" name="techStuff" value="1">
             Design
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioOne" value="0">
+            <input type="radio" name="techStuff" value="2">
             Power
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioOne" value="1">
+            <input type="radio" name="techStuff" value="3">
             Ease of use
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioOne" value="0">
+            <input type="radio" name="techStuff" value="4">
             Value
           </label>
         </div>
@@ -108,25 +108,25 @@
         <p>What is your favorite season?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioTwo" value="1">
+            <input type="radio" name="seasons" value="1">
             Winter
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioTwo" value="0">
+            <input type="radio" name="seasons" value="2">
             Spring
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioTwo" value="1">
+            <input type="radio" name="seasons" value="3">
             Summer
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioTwo" value="0">
+            <input type="radio" name="seasons" value="4">
             Fall
           </label>
         </div>
@@ -134,26 +134,26 @@
         <p>Which of these hobbies do you align with most?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioThree" value="1">
+            <input type="radio" name="hobbies" value="1">
             Playing an instrument
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioThree" value="0">
+            <input type="radio" name="hobbies" value="2">
             Cycling
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioThree" value="1">
+            <input type="radio" name="hobbies" value="3">
             Drawing
             </input>
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioThree" value="0">
+            <input type="radio" name="hobbies" value="4">
             Knitting
           </label>
         </div>
@@ -161,25 +161,25 @@
         <p>Which of the four Hogwarts Houses do you believe you belong in?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFour" value="1">
+            <input type="radio" name="hogwarts" value="1">
             Gryffindor
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFour" value="0">
+            <input type="radio" name="hogwarts" value="2">
             Slytherin
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFour" value="1">
+            <input type="radio" name="hogwarts" value="3">
             Ravenclaw
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFour" value="0">
+            <input type="radio" name="hogwarts" value="4">
             Hufflepuff
           </label>
         </div>
@@ -187,57 +187,58 @@
         <p>Which would you prefer?</p>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFive" value="1">
+            <input type="radio" name="getaway" value="1">
             A tropical island vacation
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFive" value="0">
+            <input type="radio" name="getaway" value="2">
             Camping in a serene forest
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFive" value="1">
+            <input type="radio" name="getaway" value="3">
             A luxury cruise
           </label>
         </div>
         <div class="radio">
           <label>
-            <input type="radio" name="radioFive" value="0">
+            <input type="radio" name="getaway" value="4">
             A quiet staycation
           </label>
         </div>
+        
 
-        <p>*Nice! You made it through all of the multiple choice questions! Give yourself hand! In other news, I've got greg all back up and running like normal! He'll go ahead and present your last question to you now!*</p>
+      <p>*Nice! You made it through all of the multiple choice questions! Give yourself hand! In other news, I've got greg all back up and running like normal! He'll go ahead and present your last question to you now!*</p>
 
-        <p>Greetings once again! I see that you have reached the final question. This is no ordinary, simple question. This question is the most telling of all. Are you sure you wish to continue on to the final question? Here it is! Make your selection, then click "Submit":</p>
+      <p>Greetings once again! I see that you have reached the final question. This is no ordinary, simple question. This question is the most telling of all. Are you sure you wish to continue on to the final question? Here it is! Make your selection, then click "Submit":</p>
 
         <div id="pickColor">
           <label for="color">What is your favorite color?!</label>
           <input id="color" class="favoriteColor" type="color">
         </div>
-
-        <div id="submit">
-          <input type="submit">
-        </div>
       </form>
-
-      <div id="results">
-        <div id="jScript">
-          <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is JavaScript! Woo!</p>
-        </div>
-
-        <div id="python">
-          <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is Python! Woo!</p>
-        </div>
-
-        <div id="swift">
-          <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is Swift! Woo!</p>
-        </div>
     </div>
-      
+
+  <div id="jScript">
+    <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is JavaScript! Woo!</p>
+  </div>
+  
+  <div id="python">
+    <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is Python! Woo!</p>
+  </div>
+  
+  <div id="swift">
+    <p>Congratulations! Your answers show me that beyond a shadow of a doubt, your ideal first programming language is Swift! Woo!</p>
+  </div>
+
+    <button class="button" id="submitForm">Submit</button>
+
+    <button class="button" id="refreshQuiz">Go Again!</button>
+  
+  </div>      
   </div>
 </body>
 </html>
