fix a few minor bugs in the presentation and progression and capitalized a G in Greg

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div id="nameProvided">
-      <p>*<span id="inputtedName">___</span>, eh? Nice to meet you! This is Jacob by the way. Greg is acting a bit strange today but he wants me to let you know that he is not hurt by your unwillingness to tell him your name. I'm gonna be tweaking Greg's OS for a little bit, so I'll be your guide until he's back to normal. Go ahead and click this continue button to, well, continue!*</p>
+      <p>*<span id="inputtedName">___</span>, eh? Nice to meet you! This is Jacob by the way. I've noticed that Greg has been acting strange today. A bit concering, really... Anyway, I'm gonna be tweaking Greg's OS for a little bit, so I'll be your guide until he's back to normal. Go ahead and click this continue button to, well, continue!*</p>
 
       <button class="button" id="continue">Continue</button>
     </div>
@@ -211,7 +211,7 @@
         </div>
         
 
-      <p>*Nice! You made it through all of the multiple choice questions! Give yourself hand! In other news, I've got greg all back up and running like normal! He'll go ahead and present your last question to you now!*</p>
+      <p>*Nice! You made it through all of the multiple choice questions! Give yourself hand! In other news, I've got Greg all back up and running like normal! He'll go ahead and present your last question to you now!*</p>
 
       <p>Greetings once again! I see that you have reached the final question. This is no ordinary, simple question. This question is the most telling of all. Are you sure you wish to continue on to the final question? Here it is! Make your selection, then click "Submit":</p>
 
